2005-07-01  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* tex.el (TeX-submit-bug-report): Mention FAQ section.

	* doc/changes.texi: Advertise inclusion of preview-latex and
	overhaul of installation procedures.

	* doc/install.texi (Advice for package providers): Refer to
	preview-latex.el file.

	* doc/quickstart.texi (Quick Start): Use (load "auctex.el" nil t
	t) instead of (require 'tex-site).

	* doc/faq.texi: Use (load "auctex.el" nil t t) instead of (require
	'tex-site).

	* doc/intro.texi (Introduction): Use (load "auctex.el" nil t t)
	instead of (require 'tex-site).

2005-06-30  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* doc/auctex.texi (Folding): Do not quote `lambda' function.

2005-06-29  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* font-latex.el (font-latex-quotes): Get rid of :set function and
	move most of its content to `font-latex-match-quotation'.
	(font-latex-quotes-control): New variable.  Initialize with nil.
	(font-latex-match-quotation): Use it.
	The whole changeset lets quote matching recognize automatically
	when the value of `font-latex-quotes' changed while making sure
	that the regexp only has to be rebuilt when a change actually
	occured.

	* doc/todo.texi (Mid-term Goals): Update text about integration of
	preview-latex.

	* doc/auctex.texi (Floats): Clarify use of
	`LaTeX-top-caption-list'.
	(Display, Internationalization): Make node and heading clearer.
	(European): Describe insertion of multiple consecutive hyphens.

2005-06-24  David Kastrup  <dak@gnu.org>

	* RELEASE: Minor change.

	* configure.ac: Move checks and export for PERL here (needed for
	doc of preview-latex).
	(preview_enabled): Don't export Info-related variables, as they
	are not needed in preview.

	* Makefile.in (AUCTEXVERSION): import.
	(info, dvi): No subshell needed.
	(auctex.el): Depend on config.status
	(install-metadata): pass upstream version into prv-install.el

2005-06-21  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* tex-info.el (TeX-texinfo-mode): Use `TeX-run-mode-hooks'.
